--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2263,21 +2263,20 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-left: 30px;
+    padding-right: 70px;
   }
   body .mainIndex .pedidosBoxs .guiaDePedidos ul .logosPedidos {
     width: 100px;
     height: 100px;
-    margin-left: 7px;
-  }
-  body .mainIndex .pedidosBoxs .guiaDePedidos ul .logosPedidos #i4 {
-    margin-right: 55px;
+    margin: 15px;
   }
   body .mainIndex .pedidosBoxs .guiaDePedidos ul .logosPedidos2 {
     width: 10px;
     height: 20px;
+    margin: 0;
   }
   body .mainIndex .pedidosBoxs .guiaDePedidos ul .logosPedidos2 #f2 {
     display: none;
