--- a/css/estilo.css
+++ b/css/estilo.css
@@ -562,6 +562,7 @@ main .tiposDeProductosBox h2 {
 }
 main .tiposDeProductosBox .listaImagenes {
   list-style: none;
+  text-decoration: none !important;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -570,9 +571,8 @@ main .tiposDeProductosBox .listaImagenes {
 }
 main .tiposDeProductosBox .listaImagenes li {
   text-align: center;
-  list-style-type: none;
 }
-main .tiposDeProductosBox .listaImagenes li p {
+main .tiposDeProductosBox .listaImagenes li .cateletra {
   font-family: "Belanosima" sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -601,7 +601,8 @@ main .listadoDeProductos h2 {
   text-align: center;
   color: #85eaf1;
   font-family: "Belanosima", sans-serif;
-  margin: 20px;
+  background-color: #062c45;
+  padding: 10px;
 }
 main .listadoDeProductos h3 {
   font-family: "Belanosima" sans-serif;
@@ -2215,9 +2216,29 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     justify-content: center;
     align-items: center;
   }
+  body .mainIndex .videobv .inicioSuscripcion .inicioSuscripcion {
+    position: absolute;
+    top: 10%;
+    left: 70vw;
+    z-index: 100;
+    transform: translate(-50%, -50%);
+    margin-left: 20rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
   body .mainIndex .videobv .inicioSuscripcion .boton {
     margin-bottom: 0px;
-    margin: 10px;
+    margin: 5px;
+    padding: 8px;
+    font-family: "Belanosima" sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 19px;
+    text-align: center;
+    color: #f8f5e5;
   }
   body .mainIndex .pedidosBoxs {
     display: flex;
@@ -2237,8 +2258,8 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     align-items: center;
   }
   body .mainIndex .pedidosBoxs .aLaIzquierda .logoNaranja {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
   }
   body .mainIndex .pedidosBoxs .aLaIzquierda .palabras {
     display: flex;
@@ -2269,9 +2290,9 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     padding-right: 70px;
   }
   body .mainIndex .pedidosBoxs .guiaDePedidos ul .logosPedidos {
-    width: 100px;
-    height: 100px;
-    margin: 15px;
+    width: 110px;
+    height: 110px;
+    margin: 10px;
   }
   body .mainIndex .pedidosBoxs .guiaDePedidos ul .logosPedidos2 {
     width: 10px;
@@ -2316,7 +2337,8 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     margin: 8px;
   }
   body .mainIndex .recetasBox {
-    padding-bottom: 10px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
   }
   body .mainIndex .recetasBox h2 {
     font-family: "Belanosima" sans-serif;
@@ -2326,8 +2348,8 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     text-align: center;
     color: #f8f5e5;
     font-family: "Belanosima", sans-serif;
-    background-color: #07838d;
     padding-top: 15px;
+    text-align: center;
   }
   body .mainIndex .recetasBox p {
     font-family: "Edu VIC WA NT Beginner";
@@ -2342,19 +2364,16 @@ body .mainIndex .pedidos .suscribite .sFormulario button:hover {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: -15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   body .mainIndex .recetasBox .iframe .ratio {
-    justify-content: space-evenly;
+    margin: 20px;
   }
   body .mainIndex .recetasBox .iframe .ratio:hover {
-    margin: 5px;
-    transform: scale(1.2);
-    transition: transform 0.1s;
-    z-index: 1;
+    transform: none;
   }
   body .mainIndex .tarjetaVisita {
     display: flex;
