--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -570,7 +570,7 @@ body {
         .tituloProductosBox{
             .tituloProductos{  
                 grid-template-columns: auto;
-                grid-template-rows: auto auto auto;
+                grid-template-rows: 120px auto auto;
                 grid-auto-flow: row;
                 grid-template-areas:
                 "tituloProd"
