--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -153,11 +153,11 @@ body {
                     }
                     75%{
                         font-size: 120px;
-                        color: $naranjamed;
+                        color: $celesteverdozo;
                     }
                     100%{
                         font-size: 110px;
-                        color: $naranjacla;
+                        color: $azulosc;
                     }
                 }
             }
